Fix user--admin z-index (#101)

--- a/assets/css/contents/user/user.scss
+++ b/assets/css/contents/user/user.scss
@@ -41,6 +41,7 @@
 	position: absolute;
 	top:      0;
 	left:     0;
+	z-index:  1;
 
 	&::before {
 		content:           '';
